css/schedule.css
@font-face {
    font-family: 'Open Sans';
    src: url('../fonts/OpenSans-Regular-webfont.eot');
    src: url('../fonts/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/OpenSans-Regular-webfont.woff') format('woff'),
         url('../fonts/OpenSans-Regular-webfont.ttf') format('truetype'),
         url('../fonts/OpenSans-Regular-webfont.svg#OpenSansRegular') format('svg');
    font-weight: normal;
    font-weight: 400;
    font-style: normal;
}

@font-face {
    font-family: 'Open Sans';
    src: url('../fonts/OpenSans-Bold-webfont.eot');
    src: url('../fonts/OpenSans-Bold-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/OpenSans-Bold-webfont.woff') format('woff'),
         url('../fonts/OpenSans-Bold-webfont.ttf') format('truetype'),
         url('../fonts/OpenSans-Bold-webfont.svg#OpenSansBold') format('svg');
    font-weight: bold;
    font-weight: 700;
    font-style: normal;
}

@font-face {
  font-family: 'FontAwesome';
  src: url('../fonts/fontawesome-webfont.eot?v=4.3.0');
  src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.3.0') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff2?v=4.3.0') format('woff2'), url('../fonts/fontawesome-webfont.woff?v=4.3.0') format('woff'), url('../fonts/fontawesome-webfont.ttf?v=4.3.0') format('truetype'), url('../fonts/fontawesome-webfont.svg?v=4.3.0#fontawesomeregular') format('svg');
  font-weight: normal;
  font-style: normal;
}

.fa {
  display: inline-block;
  font-family: FontAwesome;
  font-style: normal;
  font-weight: normal;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
.fa-star:before {
  content: "\f005";
}
.fa-plus-circle:before {
  content: "\f055";
}
.fa-minus-circle:before {
  content: "\f056";
}
.fa-cc:before {
  content: "\f20a";
}

*, *:before, *:after {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

body {
    color: #111;
    font-size: 18px;
    background-color: #fff;
    font-family: "ff-tisa-sans-web-pro", "Open Sans", sans-serif;
    margin: 0;
}
.container {
    position: relative;
    background: #fff;
    max-width: 1140px;
    margin: 2em auto;
    padding-left: 10em;
    padding-right: 1em;
}
a {
    color: #184774;
}

/* 2015 PAGE HEADER */
header {
    font-size: 16px;
    overflow-x: hidden;
    height: 200px;
    background-size: 1200px;
    background-position: 0 0;
    max-width: 1200px;
    margin: 0px auto;
    margin-bottom: 50px;
    position: relative;
    background-image: url(http://www.srccon.org/media/img/2015/post-its.jpg);
}

#headertop {
    width: 100%;
    height: 70px;
    background-color:rgba(0, 0, 0, 0.3)
}

.header-container {
    box-sizing: border-box;
    display: block;
    max-width: 1000px;
    margin: 0px auto;
    padding: 0px;
    position: relative;
}

header a#cornerlogo img {
    width: 150px;
    position: absolute;
    top: 5px;
}

header nav {
    float: right;
    overflow: hidden;
    font-size: 1.1em;
    line-height: 1.7em;
}

header nav ul {
    padding-left: 0px;
    text-align: center;
    margin-bottom: 1em;
}

header nav ul li {
    width: auto;
    display: inline-block;
    vertical-align: middle;
    padding: 0px 10px;
    padding-bottom: 5px;
}

header nav ul li a {
    color: white;
    text-decoration: none;
    border-bottom: 1px solid #ccc;
}

header nav ul li#sessions a,
header nav ul li a:hover {
    border-bottom: 1px solid white;
}

#headbox {
    clear: both;
    width: 100%;
    max-width: 660px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    position: relative;
    right: 1%;
    padding-top: 40px;
    font-size: 1.1em;
    line-height: 1;
}

#headbox h2,
#headbox h3 {
    color: white;
    text-shadow: 1px 1px 0px rgba(0, 0, 0, 1);
}

#headbox h2 {
    font-size: 1.8em;
    margin-bottom: 10px;
    margin-top: 0;
}

#headbox h3 {
    font-size: inherit;
    font-weight: 400;
    margin-top: 0px;
}
/* END 2015 PAGE HEADER */

#schedule-controls {
    clear: both;
    margin: 0 0 3em -6em;
    font-family: "Open Sans", sans-serif;
}

#schedule-controls ul {
    font-size: .83em;
    margin: 2em auto;
    padding: 0;
    list-style: none;
    width: 50%;
}

#schedule-controls li {
    display: inline-block;
}
#schedule-controls li:first-child a {
    -webkit-border-top-left-radius: 2px;
    -webkit-border-bottom-left-radius: 2px;
    -moz-border-radius-topleft: 2px;
    -moz-border-radius-bottomleft: 2px;
    border-top-left-radius: 2px;
    border-bottom-left-radius: 2px;
}
#schedule-controls li:last-child a {
    -webkit-border-top-right-radius: 2px;
    -webkit-border-bottom-right-radius: 2px;
    -moz-border-radius-topright: 2px;
    -moz-border-radius-bottomright: 2px;
    border-top-right-radius: 2px;
    border-bottom-right-radius: 2px;
    border-right: none;
}
#schedule-controls a {
    text-align: center;
    display: block;
    padding: .33em 0 .5em;
    color: LightSlateGray;
    background-color: WhiteSmoke;
    text-decoration: none;
    border-right: 1px solid Gainsboro;
}
#schedule-controls a.active {
    color: #000;
    font-weight: bold;
    background-color: Silver;
}

.schedule-tab,
.page-block {
    margin: 0 0 2em;
}

.schedule-tab h3 {
    font-weight: 400;
    text-transform: uppercase;
    border-bottom: 1px solid Gainsboro;
    margin: 1em 1em 1em 0;
}
.schedule-tab h3 span {
    font-family: "Open Sans", sans-serif;
    background-color: #fff;
    font-size: .67em;
    margin-top: -.75em;
    padding-right: 1em;
    float: left;
    width: 12em;
    margin-left: -12em;
    text-align: right;
}

#session-detail-wrapper {
    background-color: #fff;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 99;
    width: 100%;
    height: 100%;
    overflow-y: scroll;
    -webkit-overflow-scrolling: touch;
}
.session-detail {
    position: relative;
}
.session-detail h3 {
    margin-top: 2em;
}
.session-detail li {
    margin-bottom: .5em;
}

.session-list-item,
.open-block {
    display: block;
    clear: both;
    position: relative;
    cursor: pointer;
    padding: 1em 2.5em 2.5em 1em;
    margin: 0 2% 1em 0;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    border-radius: 2px;
}

.session-list-item {
    color: #111;
    text-decoration: none;
}

.session-list-item h4 {
    margin: 0 0 .5em;
    line-height: 1.5;
}

.session-list-item p {
    font-size: .83em;
    margin: 0;
    position: absolute;
    bottom: 1em;
}

.all-sessions .session-list-item {
    padding: .5em 2.5em 1em 0;
    background-color: #fff;
    border-bottom: 1px solid Gainsboro;
}

.all-sessions .session-list-item p {
    position: relative;
    margin: 0 0 .67em;
    bottom: auto;
}

.all-sessions .session-description {
    word-wrap: break-word;
}

#show-descriptions {
    font-size: .83em;
    padding: 2em 0 0;
    display: block;
    text-decoration: none;
    color: #111;
    margin-right: 2%;
    float: right;
}
#show-descriptions i {
    color: #fc6e1f;
}

#filter-form {
    font-size: .83em;
    margin: 1em 0 2em;
    padding: 0;
    width: 50%;
    float: left;
}

#filter-form input {
    display: block;
    width: 100%;
    font-size: 1em;
    margin-top: .25em;
}
#no-results {
    font-size: .83em;
}

.session-description ul {
    font-size: .83em;
}

.favorite {
    color: #fff;
    font-size: 1.2em;
    position: absolute;
    cursor: pointer;
    top: 0;
    right: 0;
    line-height: 1;
    width: 2.5em;
    height: 2.5em;
    padding: 0.7em 0 0 0.2em;
    text-align: center;
    text-shadow:
     -1px -1px 1px rgba(0, 0, 0, 0.1),
      1px -1px 1px rgba(0, 0, 0, 0.1),
      -1px 1px 1px rgba(0, 0, 0, 0.1),
       1px 1px 1px rgba(0, 0, 0, 0.1);
}

.session-detail .favorite,
.all-sessions .favorite {
    line-height: 1;
    background-color: #ffd0b6;
    width: 1.8em;
    height: 1.6em;
    padding: 0.33em;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    border-radius: 2px;
}

.favorite-active {
    color: #fc6e1f;
}

.session-detail .favorite-active {
    background-color: #fff;
}

.session-length-short {
    background-color: PapayaWhip;
}

.favorites .session-length-short,
.all-sessions .session-length-short {
    float: none;
    clear: both;
    width: auto;
    min-height: 0;
}

.session-length-long {
    background-color: PowderBlue;
}

.session-everyone,
.open-block {
    background-color: WhiteSmoke;
}

.session-ghost {
    opacity: .4;
}

.open-block {
    cursor: default;
    pointer-events: none;
    text-align: center;
    padding-top: 2.5em;
    color: Silver;
}

.overline {
    clear: both;
    font-family: "Open Sans", sans-serif;
    font-size: .83em;
    font-weight: 400;
}

.session-time {
    margin-right: 1em;
}
.session-transcription {
    margin-left: 1em;
    vertical-align: middle;
    opacity: .9;
}

#show-full-schedule {
    font-size: .83em;
}

.hidden {
    display: none;
}

.clearfix:before,
.clearfix:after,
.page-block:before,
.page-block:after {
    content: " ";
    display: table;
}
.clearfix:after,
.page-block:after {
    clear: both;
}
.clearfix,
.page-block {
    *zoom: 1;
}

@media screen and (max-width: 1020px) {
    header {
        width: 100%;
    }
    .header-container  {
        margin: 0 2em;
    }
}

@media only screen and (max-width: 940px) {
    #schedule-controls ul {
        float: none;
        padding-right: 1.5em;
        margin: 3em 0 0;
        width: 100%;
    }
    #schedule-controls a {
        padding: .5em 0;
    }
    header {
        background-size: cover;
    }
}

@media only screen and (min-width: 900px) {
    .session-length-short {
        float: left;
        clear: none;
        width: 48%;
        min-height: 110px;
    }
    .session-length-short:nth-child(2n+1) {
        clear: left;
    }
}

@media only screen and (max-width: 767px) {
    .schedule-tab h3 span {
        width: auto;
        margin-left: 0;
        text-align: left;
    }
    .container {
        padding: 0;
        margin: 2em 1em;
    }
    .schedule-tab h3,
    .session-list-item {
        margin-right: 0;
    }
    header {
        margin-left: 0;
    }
    #schedule-controls {
        width: 100%;
        margin: 0 0 3em 0;
    }
    #schedule-controls ul {
        padding-right: 0;
    }
    #filter-form {
        width: 100%;
        margin-bottom: 1em;
    }
    #show-descriptions {
        display: inline-block;
        padding: 0;
        margin: 0 0 2em 0;
    }
    #headbox {
        right: auto;
        width: 100%;
        margin: 1em;
        font-size: 1em;
    }
}

@media only screen and (max-width: 640px) {
    header {
        height: 180px;
        margin-bottom: 30px;
    }
    #headbox {
        padding-top: 50px;
    }
    #headbox h3 {
        display: none;
    }
}

@media only screen and (max-width: 540px) {
    header h1 {
        font-size: 2em;
    }
    header h1 img {
        display: block;
        height: 2.5em;
        margin: 0 auto .5em;
    }
    header p {
        font-size: .75em;
    }
    .session-detail .session-room {
        display: block;
        margin-top: 1em;
    }
}

@media only screen and (max-width: 480px) {
    header {
        height: 150px;
    }
    header nav {
        font-size: .9em;
    }
    header nav ul {
        margin-top: .33em;
    }
    header a#cornerlogo img {
        width: 100px;
        top: 10px;
        left: -25px;
    }
    #headertop {
        height: 40px;
    }
    #headbox {
        margin: 1em 0;
    }
}

@media only screen and (max-width: 420px) {
    header h1 {
        font-size: 1.8em;
    }
    header h1 img {
        height: 2em;
    }
    #schedule-controls {
        font-size: .75em;
    }
}

